# swetugg2024wasm

./: README.md
BlazorApp/: BlazorApp.sln
BlazorApp/Properties/: launchSettings.json
ConsoleAppWasi/: Program.cs
ConsoleAppWasi/mac/: ConsoleAppWasi  ConsoleAppWasi.deps.json  ConsoleAppWasi.runtimeconfig.json
Extend/ConsoleApp/: Program.cs
Virtualize/: README.md  cargo.toml  swetugg
Virtualize/data2file/: Cargo.toml
Virtualize/data2file/src/: bindings.rs  lib.rs
Virtualize/data2file/wit/: world.wit
Virtualize/data2filev2/: Cargo.toml  README.md
Virtualize/data2filev2/src/: bindings.rs  lib.rs
Virtualize/data2filev2/wit/: world.wit
